# NietzscheDB

./: .gitignore  AUDITORIA_PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_ANALYSIS.md  Dockerfile  LICENSE  LICENSE_AGPLv3.md  README.md  ROADMAP_PERFORMANCE.md  SECURITY.md  TestesNQL.md  check_output.txt  check_output_2.txt  checkpoint.md  docker-compose.yaml  pesquisar1.md  pesquisas.md  plot_metabolism.py  release.sh  requirements.txt  risco_hiperbolico.md  server_log_debug.txt  telemetry_D_foam.csv  telemetry_E_anchored.csv  telemetry_F_dialectical.csv  testes.md
crates/nietzsche-agency/: AGENCY.md  Cargo.toml
crates/nietzsche-agency/src/: attention_cycle.rs  attention_economy.rs  avalanche.rs  axiom_registry.rs  centroid_guardian.rs  circuit_breaker.rs  code_as_data.rs  cog_evolve.rs  cognitive_dashboard.rs  cognitive_layer.rs  compression.rs  config.rs  curiosity_engine.rs  desire.rs  dialectic.rs  dirty_set.rs  energy_evolve.rs  engine.rs  error.rs  event_bus.rs  evolution.rs  evolution_27.rs  evolve_persist.rs  flywheel.rs  graph_growth.rs  gravity.rs  hebbian.rs  hub_attenuation.rs  hyperbolic_health.rs  hyperbolic_training.rs  identity.rs  learning.rs  lib.rs  maturity.rs  morning_report.rs  neural_evolution.rs  observation.rs  observer.rs  powerlaw.rs  quantum.rs  (+9 more)
crates/nietzsche-agency/src/counterfactual/: mod.rs  shadow.rs  simulator.rs
crates/nietzsche-agency/src/daemons/: coherence.rs  entropy.rs  epistemology.rs  (+7 more)
crates/nietzsche-agi/: Cargo.toml  README.md
crates/nietzsche-agi/examples/: pipeline_ignition.rs
crates/nietzsche-agi/src/: certification.rs  criticality.rs  dialectic.rs  discovery.rs  error.rs  evolution.rs  feedback_loop.rs  genome.rs  homeostasis.rs  identity.rs  inference_engine.rs  innovation.rs  lib.rs  metabolism.rs  rationale.rs  reasoning.rs  relevance_decay.rs  representation.rs  sandbox.rs  spectral.rs  stability.rs  synthesis.rs  trajectory.rs
crates/nietzsche-algo/: Cargo.toml
crates/nietzsche-algo/src/: centrality.rs  community.rs  components.rs  lib.rs  pagerank.rs  pathfinding.rs  similarity.rs
crates/nietzsche-api/: Cargo.toml  build.rs
crates/nietzsche-api/proto/: nietzsche.proto
crates/nietzsche-api/src/: cdc.rs  lib.rs  rbac.rs  server.rs  validation.rs
crates/nietzsche-baseserver/: Cargo.toml
crates/nietzsche-baseserver/src/: collection.rs  http_server.rs  main.rs  manager.rs  sync.rs  tests.rs
crates/nietzsche-cli/: Cargo.toml
crates/nietzsche-cli/src/: app.rs  main.rs  ui.rs
crates/nietzsche-cli/tests/: cli_tests.rs
crates/nietzsche-cluster/: Cargo.toml
crates/nietzsche-cluster/src/: archetype.rs  crdt.rs  error.rs  lib.rs  node.rs  registry.rs  router.rs  scorer.rs
crates/nietzsche-core/: Cargo.toml
crates/nietzsche-core/benches/: distance_bench.rs  metric_bench.rs
crates/nietzsche-core/src/: auto_tuner.rs  config.rs  gpu.rs  lib.rs  param_evolve.rs  tests.rs  vector.rs
crates/nietzsche-cugraph/: Cargo.toml
crates/nietzsche-cugraph/src/: csr.rs  error.rs  lib.rs  traversal.rs
crates/nietzsche-cugraph/tests/: cugraph_tests.rs
crates/nietzsche-dream/: Cargo.toml
crates/nietzsche-dream/src/: engine.rs  error.rs  generator.rs  lib.rs  model.rs  store.rs  world_model.rs
crates/nietzsche-dsi/: Cargo.toml
crates/nietzsche-dsi/src/: decoder.rs  error.rs  id.rs  indexer.rs  lib.rs  pipeline.rs
crates/nietzsche-epistemics/: Cargo.toml
crates/nietzsche-epistemics/src/: coherence.rs  coverage.rs  hierarchy.rs  lib.rs  novelty.rs  redundancy.rs  scorer.rs
crates/nietzsche-experiment/: Cargo.toml
crates/nietzsche-experiment/src/: auc.rs  hyperbolic_loss.rs  lib.rs  main.rs  sampling.rs  telemetry.rs
crates/nietzsche-filtered-knn/: Cargo.toml
crates/nietzsche-filtered-knn/src/: error.rs  filter.rs  lib.rs  search.rs
crates/nietzsche-filtered-knn/tests/: integration_tests.rs
crates/nietzsche-gnn/: Cargo.toml
crates/nietzsche-gnn/src/: edge_predictor.rs  engine.rs  lib.rs  sampler.rs
crates/nietzsche-graph/: Cargo.toml
crates/nietzsche-graph/benches/: graph_bench.rs
crates/nietzsche-graph/src/: adjacency.rs  backup.rs  collection_manager.rs  concept_path.rs  db.rs  ego_cache.rs  embedded_vector_store.rs  encryption.rs  error.rs  fulltext.rs  hyperbolic_export.rs  import_export.rs  lib.rs  model.rs  schema.rs  schrodinger.rs  storage.rs  transaction.rs  traversal.rs  valence.rs  wal.rs
crates/nietzsche-hnsw/: Cargo.toml
crates/nietzsche-hnsw-gpu/: Cargo.toml
crates/nietzsche-hnsw-gpu/src/: lib.rs
crates/nietzsche-hnsw/src/: lib.rs
crates/nietzsche-hnsw/tests/: concurrency_test.rs  persistence_test.rs  prop_hnsw.rs
crates/nietzsche-hyp-ops/: Cargo.toml
crates/nietzsche-hyp-ops/benches/: hyp_ops_bench.rs
crates/nietzsche-hyp-ops/src/: curvature.rs  error.rs  klein.rs  lib.rs  manifold.rs  minkowski.rs  riemann.rs
crates/nietzsche-hyp-ops/tests/: manifold_integration.rs
crates/nietzsche-kafka/: Cargo.toml
crates/nietzsche-kafka/src/: batch.rs  error.rs  lib.rs  message.rs  sink.rs
crates/nietzsche-lsystem/: Cargo.toml
crates/nietzsche-lsystem/src/: circuit_breaker.rs  engine.rs  hausdorff.rs  lib.rs  mobius.rs  rules.rs
crates/nietzsche-mcp/: Cargo.toml
crates/nietzsche-mcp/src/: error.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/nietzsche-mcts/: Cargo.toml
crates/nietzsche-mcts/src/: advisor.rs  lib.rs  tree.rs  value_network.rs
crates/nietzsche-media/: Cargo.toml
crates/nietzsche-media/src/: error.rs  lib.rs  model.rs  store.rs
crates/nietzsche-metrics/: Cargo.toml
crates/nietzsche-metrics/src/: collectors.rs  lib.rs  registry.rs
crates/nietzsche-named-vectors/: Cargo.toml
crates/nietzsche-named-vectors/src/: error.rs  lib.rs  model.rs  store.rs
crates/nietzsche-naq/: Cargo.toml
crates/nietzsche-naq/src/: lib.rs
crates/nietzsche-narrative/: Cargo.toml
crates/nietzsche-narrative/src/: engine.rs  error.rs  lib.rs  model.rs
crates/nietzsche-neural/: Cargo.toml  errors.txt  errors_test.txt
crates/nietzsche-neural/src/: cluster_scorer.rs  lib.rs  tensor.rs
(+544 files in other folders)
