[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
rocksdb = "0.21"
bincode = "1.3"
ordered-float = "4.1"
rand = "0.8"
pest = "2"
pest_derive = "2"
# HyperspaceDB crates (fork base)
hyperspace-core = { path = "crates/hyperspace-core" }
hyperspace-proto = { path = "crates/hyperspace-proto" }
hyperspace-index = { path = "crates/hyperspace-index" }
hyperspace-store = { path = "crates/hyperspace-store" }
# NietzscheDB crates
nietzsche-graph    = { path = "crates/nietzsche-graph" }
nietzsche-query    = { path = "crates/nietzsche-query" }
nietzsche-lsystem  = { path = "crates/nietzsche-lsystem" }
nietzsche-pregel   = { path = "crates/nietzsche-pregel" }
nietzsche-sleep    = { path = "crates/nietzsche-sleep" }
nietzsche-api      = { path = "crates/nietzsche-api" }
nietzsche-sdk      = { path = "crates/nietzsche-sdk" }
nietzsche-hyp-ops      = { path = "crates/nietzsche-hyp-ops" }
nietzsche-sensory      = { path = "crates/nietzsche-sensory" }
nietzsche-zaratustra   = { path = "crates/nietzsche-zaratustra" }
nietzsche-cluster      = { path = "crates/nietzsche-cluster" }
memmap2 = "0.9"
parking_lot = "0.12"
ratatui = "0.24"
rkyv = "0.7"
smallvec = "1.11"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
