[package]
name = "nietzsche-agency"
version = "0.1.0"
edition = "2021"
description = "Autonomous agency engine: daemons, observer, and counterfactual simulator for NietzscheDB"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
nietzsche-graph   = { path = "../nietzsche-graph" }
nietzsche-pregel  = { path = "../nietzsche-pregel" }
nietzsche-lsystem = { path = "../nietzsche-lsystem" }
nietzsche-neural  = { path = "../nietzsche-neural" }
nietzsche-gnn     = { path = "../nietzsche-gnn" }
nietzsche-rl      = { path = "../nietzsche-rl" }
cudarc            = { version = "0.12", features = ["nvrtc", "cuda-version-from-build-system"], optional = true }
uuid              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tokio             = { workspace = true, features = ["sync"] }
rand              = { workspace = true }

[[bin]]
name = "simulate_forgetting"
path = "src/bin/simulate_forgetting.rs"

[[bin]]
name = "experiment_link_prediction"
path = "src/bin/experiment_link_prediction.rs"

[dev-dependencies]
tempfile = "3"
