[package]
name = "nietzsche-agi"
version = "0.1.0"
edition = "2021"
description = "AGI inference layer — explicit reasoning, verifiable trajectories, formal geometric inference, stable structural memory"

[dependencies]
nietzsche-graph   = { workspace = true }
nietzsche-hyp-ops = { workspace = true }
uuid       = { workspace = true }
serde      = { workspace = true }
serde_json = "1.0"
tracing    = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
