[package]
name = "nietzsche-api"
version = "0.1.0"
edition = "2021"
description = "Unified gRPC API exposing all NietzscheDB capabilities"

[dependencies]
nietzsche-graph = { workspace = true }
nietzsche-query = { workspace = true }
nietzsche-lsystem = { workspace = true }
nietzsche-pregel = { workspace = true }
nietzsche-sleep = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
