[package]
name = "nietzsche-core"
version = "2.0.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "metric_bench"
harness = false

[features]
default = []
nightly-simd = []
