[package]
name = "nietzsche-dream"
version = "0.1.0"
edition = "2021"
description = "Dream Queries — speculative graph exploration via hyperbolic diffusion"

[dependencies]
nietzsche-graph = { workspace = true }
nietzsche-query = { workspace = true }
serde           = { workspace = true }
serde_json      = "1.0"
tokio           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
uuid            = { workspace = true }
rand            = { workspace = true }

[dev-dependencies]
tempfile = "3"
