[package]
name = "nietzsche-epistemics"
version = "0.1.0"
edition = "2021"
description = "Epistemic quality metrics for NietzscheDB knowledge graphs"

[dependencies]
nietzsche-graph   = { path = "../nietzsche-graph" }
nietzsche-hyp-ops = { path = "../nietzsche-hyp-ops" }
uuid              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
tempfile = "3"
