[package]
name        = "nietzsche-experiment"
version     = "0.1.0"
edition     = "2021"
description = "Link Prediction experiment — AUC with hard negatives in hyperbolic space"

[[bin]]
name = "experiment"
path = "src/main.rs"

[dependencies]
nietzsche-graph   = { workspace = true }
nietzsche-agency  = { workspace = true }
nietzsche-lsystem = { path = "../nietzsche-lsystem" }
nietzsche-hyp-ops = { workspace = true }
rand              = { workspace = true }
uuid              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
