[package]
name = "nietzsche-filtered-knn"
version = "0.1.0"
edition = "2021"
description = "Filtered KNN with Roaring Bitmap pre-filtering for NietzscheDB"

[dependencies]
nietzsche-graph = { workspace = true }
roaring = "0.10"
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
