[package]
name = "nietzsche-gnn"
version = "0.1.0"
edition = "2021"

[dependencies]
nietzsche-graph = { workspace = true }
nietzsche-neural = { workspace = true }
nietzsche-hyp-ops = { workspace = true }
ort = { version = "2.0.0-rc.11", features = [ "ndarray" ] }
ndarray = "0.17"
uuid = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
