[package]
name = "nietzsche-graph"
version = "0.1.0"
edition = "2021"
description = "Hyperbolic graph engine: nodes, edges, adjacency, traversal, storage, WAL"

[dependencies]
hyperspace-core  = { workspace = true }
hyperspace-index = { workspace = true }
hyperspace-store = { workspace = true }
uuid             = { workspace = true }
dashmap          = { workspace = true }
rocksdb          = { workspace = true }
parking_lot      = { workspace = true }
lru              = { workspace = true }
once_cell        = { workspace = true }
bincode          = { workspace = true }
serde            = { workspace = true }
serde_json       = "1.0"
thiserror        = { workspace = true }
tracing          = { workspace = true }
tokio            = { workspace = true }
ordered-float    = { workspace = true }
rand             = { workspace = true }
crc32fast        = "1.4"
aes              = { workspace = true }
aes-gcm          = { workspace = true }
ctr              = { workspace = true }
getrandom        = { workspace = true }
hkdf             = { workspace = true }
sha2             = { workspace = true }

[dev-dependencies]
tempfile  = "3"
criterion = { workspace = true }

[[bench]]
name    = "graph_bench"
harness = false
