[package]
name = "nietzsche-lsystem"
version = "0.1.0"
edition = "2021"
description = "L-System engine: production rules, Hausdorff-based pruning"

[dependencies]
nietzsche-graph = { workspace = true }
hyperspace-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
