[package]
name = "nietzsche-lsystem"
version = "0.1.0"
edition = "2021"
description = "L-System fractal growth engine: production rules, Möbius placement, Hausdorff-based pruning"

[dependencies]
nietzsche-graph = { workspace = true }
uuid            = { workspace = true }
serde           = { workspace = true }
serde_json      = "1.0"
thiserror       = { workspace = true }
rand            = { workspace = true }

[dev-dependencies]
tempfile = "3"
