[package]
name = "nietzsche-metrics"
version = "0.1.0"
edition = "2021"
description = "Prometheus/OpenTelemetry metrics for NietzscheDB"

[dependencies]
once_cell = "1"
prometheus = { version = "0.13", features = ["process"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
