[package]
name = "nietzsche-narrative"
version = "0.1.0"
edition = "2021"
description = "Narrative Engine — story arc detection and generation from graph evolution"

[dependencies]
nietzsche-graph = { workspace = true }
serde           = { workspace = true }
serde_json      = "1.0"
tracing         = { workspace = true }
thiserror       = { workspace = true }
uuid            = { workspace = true }

[dev-dependencies]
tempfile = "3"
