[package]
name = "nietzsche-neural"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
nietzsche-hyp-ops = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
